# pg_fts

./: .envrc  .gitattributes  .gitignore  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFERRED.md  HANDOFF.md  LICENSE  META.json  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  flake.nix  meson.build  meson_options.txt  pg_fts--0.1.0.sql  pg_fts--0.2.0--0.2.1.sql  pg_fts--0.2.0.sql  pg_fts--0.2.1--0.2.2.sql  pg_fts--0.2.1.sql  pg_fts--0.2.2--0.2.3.sql  pg_fts--0.2.2.sql  pg_fts--0.2.3--0.2.4.sql  pg_fts--0.2.3.sql  pg_fts--0.2.4--0.3.0.sql  pg_fts--0.2.4.sql  pg_fts--0.3.0--0.3.1.sql  pg_fts--0.3.0.sql  pg_fts--0.3.1--0.3.2.sql  pg_fts--0.3.1.sql  pg_fts--0.3.2--0.3.3.sql  pg_fts--0.3.2.sql  pg_fts--0.3.3--0.3.4.sql  pg_fts--0.3.3.sql  pg_fts--0.3.4--0.3.5.sql  pg_fts--0.3.4.sql  (+56 more)
.forgejo/workflows/: ci.yml  docs.yml  release.yml
.github/: dependabot.yml
.github/ocr/: rule.json
.github/workflows/: ci.yml  docs.yml  ocr-review.yml  release.yml
bench/: BENCHMARK_PLAN.md  DESIGN_REVIEW.md  NOTE_1_0_0_READINESS.md  NOTE_ANOMALY_DETECTION.md  NOTE_COMPETITIVE_LANDSCAPE.md  NOTE_CORPUS_20M.md  NOTE_FORMAT_V3_PROFILE.md  NOTE_IMPACT_ORDERING.md  NOTE_META_WAH_ASSESSMENT.md  NOTE_PARALLEL_RANKED.md  NOTE_PHRASE_POSITIONS.md  NOTE_PHRASE_POSITIONS_FIX.md  NOTE_RANKED_RECALL.md  NOTE_SIZE_AND_SPEED.md  NOTE_SIZE_SPEED_REPLAN.md  NOTE_STRATEGY_TSVECTOR_HARDENING_UPSTREAM.md  PLAN_4WAY_BENCHMARK.md  PRODUCTION_SCALE_PLAN.md  PROFILE_STEP0.md  RANKED_SCAN_CORRECTNESS_INVESTIGATION.md  README  RESULTS_20M.md  RESULTS_4WAY.md  RESULTS_ANDOPT.md  RESULTS_BENCH_20M_100M.md  RESULTS_ENCODING.md  RESULTS_MERGE_MEMORY.md  RESULTS_MERGE_OOM.md  RESULTS_MERGE_VACUUM_DECODE.md  RESULTS_P1_P4.md  RESULTS_SEGMENTED.md  RESULTS_V022.md  RESULTS_VACUUM_SCALE.md  RESULTS_VS_CURRENT.md  RESULTS_VS_PGSEARCH.md  RESULTS_VS_PGSEARCH_WIKI.md  RESULTS_VS_VCHORD_PGTEXTSEARCH.md  RESULTS_WIKIPEDIA_2M.md  STRATEGY_REPLAN.md  anomaly.sql  (+9 more)
ci/: announce.sh  check-alloc.sh  coverage.sh  noop.pl
doc/: MIGRATING_FROM_PG_TEXTSEARCH.md  build-html.sh  pg_fts.sgml  testing.md
expected/: bm25_cic.out  bm25_concurrency.out  idx_scan_stats.out  pg_fts.out  unicode_fold.out
specs/: bm25_cic.spec  bm25_concurrency.spec
sql/: idx_scan_stats.sql  pg_fts.sql  unicode_fold.sql
t/: 001_crash_recovery.pl  002_replication.pl  003_corruption.pl  004_encodings.pl  005_concurrency.pl
test/a1_recycle/: README.md  repro.sh
test/fuzz/: CMakeLists.txt  README.md  fuzz_block.c  fuzz_docvalid.c  fuzz_for.c  run.sh
test/hegel/: CMakeLists.txt  README.md  test_docvalid.c  test_for.c  test_for_props.c  test_lev.c
